--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,22 @@
 }
 
 .student{
-  border: solid green;
-  
+  border: solid black;
+  border-width: .2px;
+  margin: 1em;
+  padding: 15px;
+  border-radius: 8px;
+}
+.scoreContainer{
+  /* border: solid red; */
+  display: flex;
+  /* justify-content: space-evenly; */
+}
+.score{
+  /* border: solid blue; */
+  border-radius: 8px;
+  margin: 1em;
+  border-width: .2px;
+  display: flex;
+  justify-content: space-around;
 }
