--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+App {
   text-align: center;
 }
 
@@ -38,22 +38,48 @@
 }
 
 .student{
-  border: solid black;
-  border-width: .2px;
-  margin: 1em;
-  padding: 15px;
-  border-radius: 8px;
+  margin:1em;
+  padding:15px;
+  border:solid black;
+  border-width:.2px;
+  border-radius:8px;
 }
+
 .scoreContainer{
-  /* border: solid red; */
   display: flex;
-  /* justify-content: space-evenly; */
+  
 }
 .score{
-  /* border: solid blue; */
-  border-radius: 8px;
-  margin: 1em;
-  border-width: .2px;
+  /* border:solid black; */
+  border-width:.2px;
+  padding:10px;
+  justify-content: space-around;
+  width:33%;
+}
+.flexer{
+  /* border:solid black; */
+  border-width:.2px;
+  justify-content: space-around;
   display: flex;
+}
+.dataset{
+  font-family:cinzel;
+  padding:5px;
+  text-align:right;
+  margin:1em;
+  width:50%;
+  font-size:10px;
+}
+.dataTitle{
+  font-family:cinzel;
+  font-size:22px;
+  /* border:solid green; */
+  border-width:.2px;
+  border-radius:50%;
+  height:95px;
+}
+
+.btnContainer{
+  display:flex;
   justify-content: space-around;
 }
